--- a/src/app/core/not-found/not-found.component.scss
+++ b/src/app/core/not-found/not-found.component.scss
@@ -1,9 +1,6 @@
 :host {
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
-}
-
-main {
-  flex-grow: 1;
+  align-items: center;
 }
