--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,47 @@
-/* You can add global styles to this file, and also import other style files */
+@use "@angular/material" as mat;
+
+html,
+body {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+:root {
+  @include mat.toolbar-overrides(
+    (
+      container-background-color: var(--mat-sys-primary-container),
+      container-text-color: var(--mat-sys-primary),
+      standard-height: 3.5rem,
+    )
+  );
+
+  @include mat.table-overrides(
+    (
+      background-color: transparent,
+    )
+  );
+
+  @include mat.progress-bar-overrides(
+    (
+      track-color: transparent,
+    )
+  );
+}
+
+h1,
+h2 {
+  font-weight: 500;
+}
+
+.container {
+  max-width: 1100px;
+  margin: 2rem auto;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
